--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,7 +23,7 @@ footer{
 }
 
 .top-link-tab {
-  display: block;
+  /* display: block; */
   width: 25%;
 }
 /*リンクにマウスが乗ったら背景色を変更する*/
@@ -32,6 +32,8 @@ footer{
   transition: 0.4s ;
   text-decoration:none;
 }
+
+
 
 .pt-140 {
   padding-top: 140px;
@@ -110,3 +112,7 @@ td {
   box-shadow :0px 0px 5px silver;
 }
 
+@media screen and (max-width: 585px) {
+  .top-link-tab {
+    display: none;
+}
