フロント微修正

--- a/public/css/favorite_player/index.css
+++ b/public/css/favorite_player/index.css
@@ -1,7 +1,6 @@
 .favorite-player-wrapper {
-  height: calc( 100vh - 90px );
+  /* height: calc( 100vh - 90px ); */
 }
-
 .favorite-contents-left {
   width: 100%;
   background-color: white;
