--- a/public/css/common/common.css
+++ b/public/css/common/common.css
@@ -44,6 +44,10 @@ footer{
   font-size: 16px;
 }
 
+.bg-gray {
+  background-color: rgb(215, 213, 213);
+}
+
 .site-header{
   transition: .5s;
   z-index: 999;
