--- a/public/css/favorite_player/index.css
+++ b/public/css/favorite_player/index.css
@@ -7,6 +7,12 @@
   border-radius :8px;
   box-shadow :0px 0px 5px silver;
 }
+.favorite-contents-brand {
+  width: 70%;
+  background-color: white;
+  border-radius :8px;
+  box-shadow :0px 0px 5px silver;
+}
 .favorite-head {
   border-top-left-radius :8px;
   border-top-right-radius :8px;
