--- a/server/public/css/app.css
+++ b/server/public/css/app.css
@@ -10903,6 +10903,678 @@ a.text-dark:focus {
   }
 }
 
+body {
+  width: 100vw;
+  background-image: url(/images/img_background_tennis.jpeg?51d77897de54d279090f941cd03a901f);
+  background-size: cover;
+  position: relative;
+}
+
+footer {
+  height: 70px;
+  width: 100%;
+  background-color: black;
+  margin-top: 22px;
+}
+
+.font-alegreya {
+  font-family: "Alegreya Sans SC", sans-serif;
+}
+
+.top-link {
+  margin-top: 32px;
+  display: flex;
+}
+
+.top-link-tab {
+  width: 25%;
+}
+
+.top-link-tab:hover {
+  background-color: #404094;
+  transition: 0.4s;
+  text-decoration: none;
+}
+
+.pt-140 {
+  padding-top: 140px;
+}
+
+.font-20 {
+  font-size: 20px;
+}
+
+.font-16 {
+  font-size: 16px;
+}
+
+.font-14 {
+  font-size: 14px;
+}
+
+.bg-gray {
+  background-color: #d7d5d5;
+}
+
+.site-header {
+  transition: 0.5s;
+  z-index: 999;
+}
+
+.site-header.hide {
+  transform: translateY(-100%);
+}
+
+/* ---- login and register ---- */
+
+.p-tb-register {
+  padding-top: 65px;
+  padding-bottom: 60px;
+}
+
+.p-tb-rogin {
+  padding-top: 125px;
+  padding-bottom: 95px;
+}
+
+/* -------- welcome page ---------- */
+
+.welcome-body {
+  padding-top: calc( (100vh / 2) - 70px );
+  height: calc( 100vh - 90px );
+}
+
+.subtitle-text {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: normal;
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  background-color: rgba(200, 200, 200, 0.55);
+}
+
+.welcome-btn {
+  width: 120px;
+  height: 40px;
+  font-size: 25px;
+  color: white;
+  border-radius: 27px;
+  background-color: black;
+  text-align: center;
+  margin: 0 auto;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.welcome-btn:hover {
+  background: rgba(64, 191, 191, 0.7);
+}
+
+.login-wrapper {
+  height: calc( 100vh - 90px );
+}
+
+.register-wrapper {
+  height: calc( 100vh - 90px );
+}
+
+.reset-wrapper {
+  height: calc( 100vh - 90px );
+}
+
+.email-wrapper {
+  height: calc( 100vh - 90px );
+}
+
+.contents-favorite {
+  width: 100%;
+  min-height: 500px;
+  height: calc(100vh - 195px);
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px silver;
+}
+
+@media screen and (max-width: 585px) {
+  .top-link-tab {
+    display: none;
+  }
+}
+
+.modal-conteiner {
+  /* min-height: 600px; */
+}
+
+.modal-head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-body {
+  min-height: 400px;
+}
+
+.iflame {
+  width: 100%;
+  height: 400px;
+}
+
+/*マスクを作成する*/
+
+#mask {
+  background: rgba(0, 0, 0, 0.5);
+  /*[POINT]背景を40％の濃さで透過する*/
+  /*[POINT]画面全体を覆うようにする*/
+  /*[POINT]絶対位置で指定し、上下左右0距離から描画を始めることで画面全体に適用できる*/
+  position: fixed;
+  /*絶対位置を指定*/
+  top: 0;
+  /*上に0距離から描画を始める*/
+  bottom: 0;
+  /*下に0距離から描画を始める*/
+  right: 0;
+  /*右に0距離から描画を始める*/
+  left: 0;
+  /*左に0距離から描画を始める*/
+  z-index: 1;
+}
+
+/*モーダル画面*/
+
+#modal {
+  border-radius: 5px;
+  background: white;
+  /*背景は白(わかりやすさのため今は白じゃない)*/
+  width: 70%;
+  /*横幅を指定*/
+  position: absolute;
+  /*絶対位置を指定(スクロールで動く)*/
+  top: 40px;
+  /*縦に40pxの位置から描画*/
+  right: 0px;
+  /*右に0距離から描画を始める*/
+  left: 0px;
+  /*左に0距離から描画を始める*/
+  margin: 0 auto;
+  /*左右中央寄せ*/
+  padding: 20px;
+  /*内側に余白*/
+  z-index: 2;
+  margin-top: 115px;
+}
+
+#mask.hidden {
+  display: none;
+  /*非表示にする*/
+}
+
+#modal.hidden {
+  transform: translate(0px, -10000px);
+  /*[POINT]マイナス方向に動かして画面外に飛ばしておく*/
+}
+
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 138px;
+  background-color: rgba(128, 128, 128, 0.55);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
+  padding: 20px;
+  z-index: 190;
+}
+
+.global-nav {
+  position: fixed;
+  right: -320px;
+  /* これで隠れる */
+  top: 0;
+  width: 300px;
+  /* スマホに収まるくらい */
+  height: 100vh;
+  padding-top: 70px;
+  background-color: #c8c8c8;
+  transition: all 0.6s;
+  z-index: 200;
+  overflow-y: auto;
+  /* メニューが多くなったらスクロールできるように */
+}
+
+.hamburger {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 45px;
+  /* クリックしやすいようにちゃんと幅を指定する */
+  height: 45px;
+  /* クリックしやすいようにちゃんと高さを指定する */
+  cursor: pointer;
+  z-index: 300;
+  margin: 20px;
+  background-color: black;
+  border-radius: 7px;
+}
+
+.global-nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.global-nav__item {
+  text-align: center;
+  padding: 0 14px;
+}
+
+.global-nav__item a {
+  display: block;
+  padding: 8px 0;
+  border-bottom: 1px solid #eee;
+  text-decoration: none;
+  color: #111;
+}
+
+.global-nav__item a:hover {
+  background-color: #eee;
+}
+
+.hamburger__line {
+  position: absolute;
+  left: 8px;
+  width: 30px;
+  height: 2px;
+  background-color: #eee;
+  transition: all 0.6s;
+}
+
+.hamburger__line--1 {
+  top: 14px;
+}
+
+.hamburger__line--2 {
+  top: 22px;
+}
+
+.hamburger__line--3 {
+  top: 30px;
+}
+
+.black-bg {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  background-color: #000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.6s;
+  cursor: pointer;
+}
+
+/* 表示された時用のCSS */
+
+.nav-open .global-nav {
+  right: 0;
+}
+
+.nav-open .black-bg {
+  opacity: 0.8;
+  visibility: visible;
+}
+
+.nav-open .hamburger__line--1 {
+  transform: rotate(45deg);
+  top: 20px;
+}
+
+.nav-open .hamburger__line--2 {
+  width: 0;
+  left: 50%;
+}
+
+.nav-open .hamburger__line--3 {
+  transform: rotate(-45deg);
+  top: 20px;
+}
+
+/*!
+ * YUI 3.5.0 - reset.css (http://developer.yahoo.com/yui/3/cssreset/)
+ * http://cssreset.com
+ * Copyright 2012 Yahoo! Inc. All rights reserved.
+ * http://yuilibrary.com/license/
+ */
+
+/*
+    TODO will need to remove settings on HTML since we can't namespace it.
+    TODO with the prefix, should I group by selector or property for weight savings?
+*/
+
+html {
+  color: #000;
+  background: #FFF;
+}
+
+/*
+  TODO remove settings on BODY since we can't namespace it.
+*/
+
+/*
+  TODO test putting a class on HEAD.
+      - Fails on FF.
+*/
+
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+textarea,
+p,
+blockquote,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+fieldset,
+img {
+  border: 0;
+}
+
+/*
+  TODO think about hanlding inheritence differently, maybe letting IE6 fail a bit...
+*/
+
+address,
+caption,
+cite,
+code,
+dfn,
+em,
+strong,
+th,
+var {
+  font-style: normal;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+caption,
+th {
+  text-align: left;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+q:before,
+q:after {
+  content: "";
+}
+
+abbr,
+acronym {
+  border: 0;
+  font-variant: normal;
+}
+
+/* to preserve line-height and selector appearance */
+
+sup {
+  vertical-align: text-top;
+}
+
+sub {
+  vertical-align: text-bottom;
+}
+
+input,
+textarea,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+/*to enable resizing for IE*/
+
+input,
+textarea,
+select {
+  *font-size: 100%;
+}
+
+/*because legend doesn't inherit in IE */
+
+legend {
+  color: #000;
+}
+
+/* YUI CSS Detection Stamp */
+
+#yui3-css-stamp.cssreset {
+  display: none;
+}
+
+.favorite-player-wrapper {
+  height: calc( 100vh - 90px );
+}
+
+.favorite-contents-left {
+  width: 100%;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px silver;
+}
+
+.favorite-contents-brand {
+  width: 70%;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px silver;
+}
+
+.favorite-head {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.favorite-td {
+  padding-top: 20px;
+}
+
+.favorite-name-jp-w {
+  width: 30%;
+}
+
+.favorite-name-en-w {
+  width: 30%;
+}
+
+.favorite-country-w {
+  width: 20%;
+}
+
+.favorite-age-w {
+  width: 10%;
+}
+
+.favorite-tbody {
+  overflow: scroll;
+  overflow-x: hidden;
+  min-height: 432px;
+  height: calc( 100vh - 450px );
+}
+
+.favorite-add-btn {
+  cursor: pointer;
+}
+
+.link-text {
+  cursor: pointer;
+}
+
+.question-btn {
+  cursor: pointer;
+}
+
+/* -------- mutual parts ---------- */
+
+.top-contents-head {
+  border-radius: 8px 8px 0px 0px;
+}
+
+.top-movie-box {
+  min-height: 650px;
+}
+
+/* -------- contents-left ---------- */
+
+.top-contents-left {
+  width: 100%;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px silver;
+}
+
+.top-left-li {
+  line-height: 1;
+  padding: 0.5em 0;
+}
+
+.top-left-list-box {
+  height: 300px;
+  overflow: scroll;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+/* -------- contents-center ---------- */
+
+.top-contents-center {
+  width: 100%;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px silver;
+}
+
+.top-contents-center-td {
+  line-height: 1;
+  padding: 0.5em 0;
+}
+
+.top-center-list-box {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+
+.top-center-tbody {
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 240px;
+}
+
+.top-center-table-date-w {
+  width: 30%;
+}
+
+.top-center-table-name-w {
+  width: 55%;
+}
+
+.top-center-table-category-w {
+  width: 15%;
+}
+
+/* -------- contents-right ---------- */
+
+.top-contents-right {
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px silver;
+}
+
+.top-contents-right-td {
+  line-height: 1;
+  padding: 0.5em 0;
+}
+
+.top-right-list-box {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.top-right-table-rank-w {
+  width: 26%;
+}
+
+.top-right-table-name-w {
+  width: 59%;
+}
+
+.top-right-table-point-w {
+  width: 15%;
+}
+
+.top-right-tbody {
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 1295px;
+}
+
+.rank-up-arrow {
+  color: #458ed6;
+}
+
+.rank-down-arrow {
+  color: #f72f2f;
+}
+
+.rank-right-arrow {
+  color: #b0e068;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
