--- a/server/resources/sass/app.scss
+++ b/server/resources/sass/app.scss
@@ -8,6 +8,13 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import '_common/common';
+@import '_common/modal';
+@import '_common/nav_menue';
+@import '_common/reset';
+@import '_favorite_player/index';
+@import '_top/index';
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
